grub2 (1.99-24) UNRELEASED; urgency=low

  * Acknowledge NMU with thanks.
  * Fix namespace of EFI boot failure patch file added in NMU.

 -- Colin Watson <cjwatson@debian.org>  Fri, 28 Dec 2012 05:17:38 +0000

grub2 (1.99-23.1) unstable; urgency=low

  * Non-maintainer upload.
  * Apply Ubuntu patch fixing some EFI boot failures (closes: #687320)
    - Thanks to Colin Watson.

 -- Michael Gilbert <mgilbert@debian.org>  Sun, 14 Oct 2012 04:09:51 -0400

grub2 (1.99-23) unstable; urgency=low

  [ Debconf translations ]
  * Lithuanian (Rimas Kudelis).  Closes: #675628
  * Galician (Jorge Barreiro).  Closes: #677389
  * Welsh (Daffyd Tomos).
  * Greek (galaxico).  Closes: #685201
  * Romanian (Andrei POPESCU).  Closes: #685477
  * Finnish (Timo Jyrinki).

  [ Cyril Brulebois ]
  * Use xz compression for all binaries to save up some space on CD images
    (closes: #688773).

  [ Colin Watson ]
  * Autogenerate packaging files for grub-emu (closes: #688727), in order
    that its postinst does not contain unexpanded @PACKAGE@ symbols.
  * Manually expand @PACKAGE@ symbols in grub-efi.postinst (closes:
    #688725), grub-linuxbios.postinst (closes: #688726), and grub2.postinst
    (closes: #688724).

 -- Colin Watson <cjwatson@debian.org>  Tue, 25 Sep 2012 18:59:18 +0100

grub2 (1.99-22.1) unstable; urgency=low

  * Non-maintainer upload.
  * Apply upstream patches for hurd-i386:
    - Test inode number (Closes: #634799).
    - Disable zfs code on GNU/Hurd (Closes: #670069).
    - Add userland partition support (Closes: #670186).
  * Fix packages build without libfuse (Closes: #670189).

 -- Samuel Thibault <sthibault@debian.org>  Fri, 08 Jun 2012 01:19:00 +0200

grub2 (1.99-22) unstable; urgency=low

  [ Debconf translations ]
  * Khmer added (Khoem Sokhem)
  * Slovenian (Vanja Cvelbar).  Closes: #670616
  * Traditional Chinese (Vincent Chen).
  * Vietnamese (Hai Lang).
  * Marathi (Sampada Nakhare)
  * Finnish (Timo Jyrinki).  Closes: #673976